--- a/My-Ai/Components/App.razor
+++ b/My-Ai/Components/App.razor
@@ -5,16 +5,23 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
-    <link rel="stylesheet" href="@Assets["lib/bootstrap/dist/css/bootstrap.min.css"]" />
-    <link rel="stylesheet" href="@Assets["app.css"]" />
-    <link rel="stylesheet" href="@Assets["My-Ai.styles.css"]" />
+    <link rel="stylesheet" href='@Assets["lib/bootstrap/dist/css/bootstrap.min.css"]' />
+    <link rel="stylesheet" href='@Assets["app.css"]' />
+    <link rel="stylesheet" href='@Assets["Ai-My.styles.css"]' />
     <ImportMap />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href='@Assets["favicon.png"]' />
     <HeadOutlet />
 </head>
 
 <body>
     <Routes />
+
+    <div id="blazor-error-ui" data-nosnippet>
+        An unhandled error has occurred.
+        <a href="." class="reload">Reload</a>
+        <span class="dismiss">🗙</span>
+    </div>
+
     <script src="_framework/blazor.web.js"></script>
 </body>
 
