--- a/My-Ai/Components/Pages/ArtsAndCrafts/SowingPattern.razor
+++ b/My-Ai/Components/Pages/ArtsAndCrafts/SowingPattern.razor
@@ -8,7 +8,7 @@
 
 <PageTitle>SowingPattern</PageTitle>
 
-<Banner Title="SowingPatter"
+<Banner Title="Sowing Pattern"
         Subtitle="Upload an image of clothes to turn it into a sowing pattern"
         BackgroundImageUrl='@Assets["images/artsandcrafts/paintbrushes.jpg"]'
         BackgroundPosition="center 30%"
