--- a/My-Ai/Components/Pages/Home.razor
+++ b/My-Ai/Components/Pages/Home.razor
@@ -42,7 +42,7 @@
                 <div class="tile-description">Create a colouring page from a picture</div>
             </a>
 
-            <a href="/ColouringPage" class="page-tile colouring-page-tile">
+            <a href="/SowingPattern" class="page-tile sowing-pattern-tile">
                 <div class="tile-icon">✂️</div>
                 <div class="tile-title">Sowing Pattern</div>
                 <div class="tile-description">Create a sowing patter from a picutre of clothes</div>
