--- a/My-Ai/Components/Layout/NavMenu.razor
+++ b/My-Ai/Components/Layout/NavMenu.razor
@@ -37,7 +37,7 @@
                     <NavMenuLink Href="ColouringPage" Text="Colouring Page" IconEmoji="🖼️" />
                 </div>
                 <div class="nav-item px-2">
-                    <NavMenuLink Href="SowingPattern" Text="Sowing Pattern" IconEmoji="✂️" />
+                    <NavMenuLink Href="sewingPattern" Text="sewing Pattern" IconEmoji="✂️" />
                 </div>
             </div>
         </details>
