--- a/My-Ai/Components/Pages/ArtsAndCrafts/ColouringPage.razor
+++ b/My-Ai/Components/Pages/ArtsAndCrafts/ColouringPage.razor
@@ -51,7 +51,11 @@
         <div class="card mt-3">
             <div class="card-header">Result</div>
             <div class="card-body">
-                <img src="@result" class="img-fluid" alt="Colouring page result" />
+                <img src="@result"
+                     class="img-fluid"
+                     alt="Colouring page result"
+                     loading="lazy"
+                     decoding="async" />
             </div>
         </div>
     }
