--- a/My-Ai/Components/Pages/JobHunting/CoverLetter.razor
+++ b/My-Ai/Components/Pages/JobHunting/CoverLetter.razor
@@ -6,6 +6,10 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Http
 
+<HeadContent>
+    <link rel="preload" as="image" href='@Assets["images/jobhunting/pen-and-paper.jpg"]' />
+</HeadContent>
+
 <PageTitle>Cover Letter</PageTitle>
 
 <Banner Title="Cover Letter"
