--- a/My-Ai/Components/Layout/HomeLayout.razor
+++ b/My-Ai/Components/Layout/HomeLayout.razor
@@ -3,10 +3,13 @@
 <div class="page">
     <main class="home-main">
         <article class="content px-4">
-            <div class="top-row px-4">
-                <a href="/about" target="_blank">About</a>
-            </div>
             @Body
         </article>
+        <footer class ="app-footer px-4" role="contentinfo">
+            <div class="footer-links">
+                <a href="/about" target="_blank">About</a>
+                <a href="/privacy">Privacy</a>
+            </div>
+        </footer>
     </main>
 </div>
