--- a/My-Ai/Components/Pages/ArtsAndCrafts/SewingPattern.razor
+++ b/My-Ai/Components/Pages/ArtsAndCrafts/SewingPattern.razor
@@ -38,11 +38,11 @@
         @if (isProcessing)
         {
             <span class="spinner-border spinner-border-sm me-2"></span>
-            <span class="btn-text">Generating Sewing Pattern...</span>
+            <span class="btn-text">Generating sewing Pattern...</span>
         }
         else
         {
-            <span class="btn-text">Generate Sewing Pattern</span>
+            <span class="btn-text">Generate sewing Pattern</span>
         }
     </button>
 
